<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditEmployerProfile">

    <TextView
        android:id="@+id/employerName"
        android:layout_width="99dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:text="Name:"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/insert_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintLeft_toRightOf="@+id/employerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <TextView
        android:id="@+id/employerAge"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="Age:"


        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insert_Age"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"

        app:layout_constraintLeft_toRightOf="@+id/employerAge"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employerPhone"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:text="Phone:"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insert_Phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="112dp"

        app:layout_constraintLeft_toRightOf="@+id/employerPhone"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/sumbitUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:text="Update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insert_Phone"
        tools:layout_editor_absoluteY="153dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jobsRecyclingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/employerName"
        android:layout_marginTop="200dp"
        tools:listitem="@layout/jobitem"
        />


</androidx.constraintlayout.widget.ConstraintLayout>